--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -1,12 +1,11 @@
 <html>
 <head>
-    <title>TS Starter-Template</title>
+    <title>TS Starter-Template - <%= version %></title>
 </head>
 <body>
 <div id="container">
     <span id="scss">A "Hello" from .scss!</span>
 </div>
-Version: <%=version%><br>
 <button id="tstest">Hallo</button>
 </body>
 </html>
