Funkt mit images, autoprefixer und images in TS

--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -6,10 +6,15 @@
     <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
+
 ${require('./_partials/nav.html')}
+<img id="frontImg" style="height: 200px;"/>
+
 <p>I'm the content!! - Index1</p>
 <div id="app">Loading...</div>
 <div id="tstest">Click me</div>
+<div class="example">Test für PREFIXER!</div>
+<div>CAT: <img src="assets/images/static/cat.jpg"></div>
 <hr>
 Version <%= version %><br>
 </body>
