--- a/src/main/dart/web/styles.css
+++ b/src/main/dart/web/styles.css
@@ -3,7 +3,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 10px;
   padding: 0;
   font-family: 'Roboto', sans-serif;
 }
