--- a/src/web/assets/styles/main.scss
+++ b/src/web/assets/styles/main.scss
@@ -1,5 +1,14 @@
-$background: #f0f;
+$background: #0ff;
 
 body {
   background-color: $background;
+  background-image: url("../images/lambi.png");
+  background-repeat: no-repeat;
+}
+
+.example {
+  display: grid;
+  transition: all .5s;
+  user-select: none;
+  background: linear-gradient(to bottom, white, black);
 }
