types werden in dist erstellt, assets-Folder in src/web gelöscht

--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -14,7 +14,7 @@ ${require('./_partials/nav.html')}
 <div id="app">Loading...</div>
 <div id="tstest">Click me</div>
 <div class="example">Test für PREFIXER!</div>
-<div>CAT: <img src="assets/images/static/cat.jpg"></div>
+<div>CAT: <img src="images/static/cat.jpg"></div>
 <hr>
 Version <%= version %><br>
 </body>
