--- a/src/site/styles/main.scss
+++ b/src/site/styles/main.scss
@@ -14,6 +14,15 @@ body {
     max-width: 300px;
     border-radius: 5px;
   }
+
+  #tstest {
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 3px;
+    background-color: darkolivegreen;
+    padding: 5px 10px;
+    margin: 5px 0;
+  }
 }
 
 
