WebPack erstellt auch eine Node-Version

--- a/src/site/styles/main.scss
+++ b/src/site/styles/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
 $sticky-color: #673ab7;
-$block-color: #6844b71a;
+$block-color: rgba(#6844b7, 0.10);
 
 body {
   background-image: url("../images/static/background.png");
