--- a/src/site/index.ejs
+++ b/src/site/index.ejs
@@ -3,6 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title <%= version %></title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png"> -->
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Material Design Lite">
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#3372DF">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <script src="http://localhost:35729/livereload.js"></script>
     <style>
         .modal { display: none; }
@@ -27,9 +49,21 @@
             </div>
         </div>
 
-        <div id="tstest">Click me</div>
+        <div class="toolbar">
+            <div class="button" id="tstest">Click me</div>
+            <div class="button" id="tsevent">TS-Event</div>
+            <div class="button" id="tsexception">TS-Exception</div>
+        </div>
+        
         <div class="example">Test für PREFIXER!</div>
-
+        <div class="chat">
+            <ul class="smooth" id="output"></ul>
+            <input type="text" class="smooth" id="input">
+            <div>
+                <input class="button" type="button" id="connect" value="Connect">
+                <input class="button" type="button" id="send" value="Send">
+            </div>
+        </div>
 
         <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
             dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
