--- a/src/site/styles/main.scss
+++ b/src/site/styles/main.scss
@@ -1,97 +1,228 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
+@import '_normalize.css';
+@import 'reset';
+
 $sticky-color: #673ab7;
-$block-color: rgba(#6844b7, 0.10);
+$block-color: rgba(#6844b7, 0.1);
+$header-footer-height: 50px;
+$header-footer-padding: 10px;
 
 body {
-  background-image: url("../images/static/background.png");
-  font-family: 'Rubik', sans-serif;
-  font-size: 15px;
+    background-image: url('../images/static/background.png');
+    font-family: 'Rubik', sans-serif;
+    font-size: 15px;
+}
+
+.button {
+    display: inline-block;
+    border: 1px solid #b7b7b7 !important;
+    border-radius: 3px;
+    padding: 5px 10px;
+    line-height: 15px;
+    cursor: pointer;
+    min-height: 27px;
+}
+button:focus {
+    outline: 0;
 }
 
 .modal__content {
-  img {
-    max-width: 300px;
-    border-radius: 5px;
-  }
+    img {
+        max-width: 250px;
+        border-radius: 5px;
+    }
 
-  #tstest {
-    display: inline-block;
-    border: 1px solid black;
-    border-radius: 3px;
-    background-color: darkolivegreen;
-    padding: 5px 10px;
-    margin: 5px 0;
-  }
+    .toolbar {
+        padding: 10px 0;
+
+        display: flex;
+        flex-direction: row;
+
+        > * {
+            margin-right: 10px;
+        }
+    }
+
+    #tstest {
+        background-color: darkolivegreen;
+    }
+
+    #tsevent {
+        background-color: cornflowerblue;
+        color: white;
+    }
+    #tsexception {
+        background-color: orangered;
+        color: white;
+    }
 }
 
-
 .modal {
-  // per default auf none im HTML-File
-  body.loaded & {
-    display: block;
-  }
-  
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
+    // per default auf none im HTML-File
+    body.loaded & {
+        display: block;
+    }
 
-  &__content {
-    overflow-y: auto;
-  }
+    //height: 100%;
+    //left: 0;
+    //position: fixed;
+    //top: 0;
+    //width: 100%;
 
-  &__header, &__footer {
-    padding: 10px;
-    height: 30px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start; // ↓
+    align-content: space-between; // =
+    align-items: flex-start; // ⇾
 
-    color: white;
-    a { color: white; text-decoration: none; }
-    
-    background-color: $sticky-color;
+    &__header {
+    }
+
+    &__content {
+        flex-grow: 1;
+
+        max-height: calc(100vh - (#{$header-footer-height} * 2));
+        height: calc(100vh - (#{$header-footer-height} * 2));
+
+        overflow-y: scroll;
+        padding: 10px;
+    }
+
+    &__footer {
+    }
+
+    &__header,
+    &__footer {
+        padding: $header-footer-padding;
+
+        line-height: $header-footer-height - ($header-footer-padding * 2);
+        height: $header-footer-height;
+
+        color: white;
+        a {
+            color: white;
+            text-decoration: none;
+        }
+
+        background-color: $sticky-color;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start; // ⇾
+        align-content: space-between; // ||
+        align-items: center; // ↓
+    }
+
+    &__content {
+        // top: $header-footer-height + ($header-footer-padding * 3);
+        // bottom: $header-footer-height + ($header-footer-padding * 3);
+        // overflow-x: auto;
+        // overflow-y: scroll;
+        // padding: 5px 10px;
+        // left: 10px;
+        // right: 10px;
+    }
+
+    &__footer {
+        bottom: 0;
+        font-size: 90%;
+        width: 100%;
+    }
+}
+
+.row {
+    width: 100%;
+    margin: 10px 0;
 
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start; // ⇾
-    align-content: space-between; // ||
+    justify-content: space-evenly; // ⇾
+    align-content: inherit; // ||
     align-items: center; // ↓
-  }
 
-  &__content, &__footer {
-    position: absolute;
-    width: 100%;
-  }
-
-  &__content {
-    bottom: 100px;
-    top: 100px;
-    overflow-y: auto;
-    padding: 5px 10px;
-  }
-
-  &__footer {
-    bottom: 0;
-    font-size: 90%;
-  }
+    > .col {
+        background-color: $block-color;
+        margin-right: 10px;
+        padding: 15px;
+        border-radius: 3px;
+    }
 }
 
-.row {
-  width: 100%;
-  margin: 10px 0;
-  
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly; // ⇾
-  align-content: inherit; // ||
-  align-items: center; // ↓
+.chat {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start; // ↓
+    align-content: space-between; // =
+    align-items: flex-start; // ⇾
 
-  > .col {
-    background-color: $block-color;
-    margin-right: 10px;
+    margin-top: 10px;
     padding: 15px;
+    background-color: #00000017;
     border-radius: 3px;
-  }
+
+    > * {
+        margin-bottom: 5px;
+    }
+
+    .smooth {
+        border-radius: 3px;
+    }
+
+    #output {
+        width: 100%;
+        align-self: stretch;
+        height: 15ex;
+        overflow: auto;
+        border: 2px solid gray;
+        padding: 3px 5px;
+
+        //display: flex;
+        //flex-direction: column-reverse;
+        //flex-wrap: wrap;
+        //justify-content: flex-start; // ↓
+        //// align-content: space-between; // =
+        //align-items: flex-start; // ⇾
+
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: nowrap;
+        justify-content: flex-start; // ⇾
+        align-content: flex-start; // ||
+        align-items: flex-start; // ↓
+
+        li {
+            // flex-grow: 1;
+            flex: 0 0 auto;
+        }
+    }
+
+    input {
+        height: 27px;
+        border: 2px solid gray;
+        padding: 3px 5px;
+    }
+
+    #username {
+    }
+
+    #input {
+        width: 100%;
+    }
+
+    #connect {
+        height: 25px;
+        background-color: red;
+    }
+
+    #send {
+        height: 25px;
+        background-color: orchid;
+        margin-bottom: inherit;
+        margin-left: 0;
+    }
 }
