--- a/src/site/index.ejs
+++ b/src/site/index.ejs
@@ -34,20 +34,12 @@
 <div class="modal">
     <div class="modal__header">
         ${require('./_partials/nav.html')}
+        <div class="demo_images">
+            <img class="cat" src="images/static/cat.jpg">
+            <img id="frontImg"/>
+        </div>
     </div>
     <div class="modal__content">
-        <div class="row">
-            <div class="col">
-                <p>Statisch</p>
-                <div>
-                    <img class="cat" src="images/static/cat.jpg">
-                </div>
-            </div>
-            <div class="col">
-                <p>Dynamisch über Script</p>
-                <img id="frontImg"/>
-            </div>
-        </div>
 
         <div class="toolbar">
             <div class="button" id="tstest">Click me</div>
@@ -56,26 +48,21 @@
         </div>
         
         <div class="example">Test für PREFIXER!</div>
-        <div class="chat">
-            <ul class="smooth" id="output"></ul>
-            <input type="text" class="smooth" id="input">
-            <div>
-                <input class="button" type="button" id="connect" value="Connect">
-                <input class="button" type="button" id="send" value="Send">
-            </div>
-        </div>
 
         <p class="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-            clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-            consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
             sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
             sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         <hr>
 
     </div>
     <div class="modal__footer">
-        <div id="app">Loading...</div> / <span class="version">Version <%= version %></span>
+        <div>
+            <span id="app">Loading...</span>
+        </div>
+        <div>
+            <span class="version">Version <%= version %></span>
+        </div>
+
     </div>
 </div>
 </body>
