--- a/src/site/styles/main.scss
+++ b/src/site/styles/main.scss
@@ -16,7 +16,9 @@ $header-footer-padding: 10px;
 // https://developer.mozilla.org/en-US/docs/Web/CSS/:root
 :root {
     --vh: 1vh;
-    --content-height: calc(var(--vh, 1vh) * 100 - (#{$header-footer-height} * 2));
+    --header-footer-height: #{$header-footer-height};
+    --content-height: calc(var(--vh, 1vh) * 100 - calc(var(--header-footer-height) * 2));
+
 }
 
 body {
