Einige Config-Files bereinigt

--- a/src/site/index.ejs
+++ b/src/site/index.ejs
@@ -50,7 +50,7 @@
         <a class="branding logo" href="/">
             <img src="images/static/logo.png"><span class="title"><span>Mobi</span>Template</span>
         </a>
-        <% include _partials/nav.ejs %>
+        <% include _partials/nav.html %>
         <span class="spacer"></span>
         <div class="demo_images">
             <img class="cat" src="images/static/cat.jpg">
