--- a/src/site/index.ejs
+++ b/src/site/index.ejs
@@ -31,9 +31,6 @@
     <!-- Font für Logo -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- QUNIT -->
-    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
-
     <% if(devmode){ %>
         <script src="http://localhost:35729/livereload.js"></script>
     <% } %>
@@ -57,7 +54,7 @@
             <img id="frontImg"/>
         </div>
     </div>
-    <div class="layout__content">
+    <div class="layout__content col-2">
         <div class="content">
             <div class="left">
                 <div class="toolbar">
@@ -68,38 +65,12 @@
                 <div class="example">Test für PREFIXER!</div>
                 <% include _partials/lorem.html %>
                 <% include _partials/lorem.html %>
-                <% include _partials/lorem.html %>
-                <% include _partials/lorem.html %>
-                <% include _partials/lorem.html %>
-                <% include _partials/lorem.html %>
             </div>
             <div class="right">
-                <div id="unit-tests">
-                    <div id="qunit"></div>
-                    <div id="qunit-fixture"></div>
-                </div>
+                <% include _partials/muni.html %>
             </div>
         </div>
     </div>
-    <div class="layout__footer">
-        <div class="is-left">
-            <span class="loading">Loading...</span>
-        </div>
-        <div class="is-right">
-            <div class="version_block">
-                <span class="version">Version <%= version %></span>
-                <span class="separator">/</span>
-                <span class="published"><%= published %></span>
-                <span class="separator">/</span>
-            </div>
-            <% if(devmode) { %>
-                <span class="devmode">DevMode</span>
-            <% } else { %>
-                <span class="production">Production</span>
-            <% } %>
-        </div>
-
-    </div>
+    <% include _partials/footer.html  %>
 </div>
 </body>
-<script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
